add Maple worksheet

--- a/Ausarbeitung/document.tex
+++ b/Ausarbeitung/document.tex
@@ -670,8 +670,16 @@ Dieser in der Praxis wichtige Fall wird Anpassung genannt. Es treten keine unerw
 rücklaufenden Wellen auf; die eingespeiste Energie wird vollständig übertragen.
 
 \subsubsection{Allgemeiner Abschluss}
-Für einen beliebigen Widerstand $Z_{e}$ am Leiterende kommt es zu einer Reflektion der einfallenden Welle, siehe
-Abbildung~\ref{} (zeige reflektierte Welle).
+Für einen beliebigen Widerstand $Z_{e}$ am Leiterende kommt es zu einer Reflexion der einfallenden Welle, siehe
+Abbildung~\ref{ReflektierteWelle}.
+\begin{figure}[!htpb]
+    \begin{center}
+        \input{../graphics/RelektierteWelle/document}
+        \caption{Einschaltbild eines infinitesimalen Leitungsstücks einer verlustbehafteten Leitung. Entnommen
+            aus~\cite{LeitungenUndFilter}.}
+        \label{ReflektierteWelle}
+    \end{center}
+\end{figure}
 
 Setzen wir $\underline{U}_{e} = Z_{w} \underline{I}_{e}$ in \eqref{eq:UxE} und \eqref{eq:IxE} ein, so folgt
 \[
