--- a/Ausarbeitung/document.tex
+++ b/Ausarbeitung/document.tex
@@ -757,6 +757,79 @@ Für die rücklaufende gilt entsprechend
 {\color{red} stimmt das so? $U_v$(l) muss minimal sein, $U_v$(0) maximal...}
 
 
+\appendix
+
+\chapter{Wellenausbreitungen für den verlustloses Fall}
+Die folgende Abbildung zeigt die zeitliche Wellenausbreitung für verschiedene Zeiten $t$ und Reflexionskoeffizienten
+$r$ entlang eines verlustlosen zylindrischen Leiters ($R^{\prime} = G^{\prime} = 0$). Die schwarzen Hüllkurven sind
+jeweils durch \[
+\mathrm{Re} ( \left| U_{h}(z) + U_{r}(z) \right| )
+\] bzw. \[
+- \mathrm{Re} ( \left| U_{h}(z) + U_{r}(z) \right| )
+\] gegeben. Die Maxima der Amplituden laufen auf der oberen, die Minima auf der unteren Hüllkurve für alle $t$.
+\begin{figure}[!htpb]
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{../graphics/Enveloppe/verlustlos/R0}
+        \caption*{$r=0$, $t=0.1$ (blau), $t=0.2$ (orange) und $t=0.3$ (grün)}
+    \end{minipage}\hfill
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{../graphics/Enveloppe/verlustlos/R0.5}
+        \caption*{$r=0.5$, $t=0.1$ (blau), $t=0.2$ (orange) und $t=0.35$ (grün)}
+    \end{minipage}
+
+    \vspace{1ex}
+
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{../graphics/Enveloppe/verlustlos/R1}
+        \caption*{$r=1$, $t=0.1$ (blau), $t=0.2$ (orange) und $t=0.28$ (grün)}
+    \end{minipage}\hfill
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{../graphics/Enveloppe/verlustlos/R-1}
+        \caption*{$r=-1$, $t=0.05$ (blau), $t=0.1$ (orange) und $t=0.15$ (grün)}
+    \end{minipage}
+
+\end{figure}
+
+
+\chapter{Wellenausbreitungen für den verlustbehafteten Fall}
+Die folgende Abbildung zeigt die zeitliche Wellenausbreitung für verschiedene Zeiten $t$ und Reflexionskoeffizienten
+$r$ entlang eines zylindrischen, verlustbehafteten Leiters (\mbox{$R^{\prime} \neq 0$}, $G^{\prime} \neq 0$). Die
+schwarzen
+Hüllkurven sind jeweils durch \[
+\mathrm{Re} ( \left| U_{h}(z) + U_{r}(z) \right| )
+\] bzw. \[
+- \mathrm{Re} ( \left| U_{h}(z) + U_{r}(z) \right| )
+\] gegeben. Die Maxima der Amplituden laufen auf der oberen, die Minima auf der unteren Hüllkurve für alle $t$.
+\begin{figure}[!htpb]
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{../graphics/Enveloppe/verlustbehaftet/R0}
+        \caption*{$r=0$, $t=0.1$ (blau), $t=0.2$ (orange) und $t=0.3$ (grün)}
+    \end{minipage}\hfill
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{../graphics/Enveloppe/verlustbehaftet/R0.5}
+        \caption*{$r=0.5$, $t=0.1$ (blau), $t=0.2$ (orange) und $t=0.3$ (grün)}
+    \end{minipage}
+
+    \vspace{1ex}
+
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{../graphics/Enveloppe/verlustbehaftet/R1}
+        \caption*{$r=1$, $t=0.1$ (blau), $t=0.2$ (orange) und $t=0.3$ (grün)}
+    \end{minipage}\hfill
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{../graphics/Enveloppe/verlustbehaftet/R-1}
+        \caption*{$r=-1$, $t=0.1$ (blau), $t=0.2$ (orange) und $t=0.5$ (grün)}
+    \end{minipage}
+\end{figure}
+
 
 \printbibliography
 
