--- a/Ausarbeitung/document.tex
+++ b/Ausarbeitung/document.tex
@@ -759,7 +759,8 @@ Für die rücklaufende gilt entsprechend
 \begin{figure}[!htbp]
     \begin{subfigure}[b]{0.49\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{../graphics/Enveloppe/verlustbehaftet/R-1Abs}
+%        \includegraphics[width=\textwidth]{../graphics/Enveloppe/verlustbehaftet/R-1Abs}
+        \input{../graphics/R-1AbsEmbelished/document}
         \caption{\color{red}Caption for the first picture}
         \label{KurzschlussAbs}
     \end{subfigure}%
