--- a/graphics/R-1AbsEmbelished/document.tex
+++ b/graphics/R-1AbsEmbelished/document.tex
@@ -35,8 +35,10 @@
 % Position 5
 \draw[fill=red, draw=red] (7.75,4.73) circle[radius=1pt] node[nodeStyle=90] {5};
 
-
+% obere Enveloppe
 \draw (4.5, 5.17) -- (5.25,5.5) node[right] {$|U_{h}| + |U_{r}|$};
+
+% untere Enveloppe
 \draw (4, 3.15) -- (3.75,2.5) node[below] {$|U_{h}| - |U_{r}|$};
 
 \end{tikzpicture}
